--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title"> Hi, I'am Dikha</h1>
-                        <h3 class="home__subtitle">Mobile developer</h3>
-                        <p class="home__description">High level experience in web design and development knowledge,
-                            producing quality work.</p>
+                        <h3 class="home__subtitle">Fresh Graduate</h3>
+                        <p class="home__description">A graduate majoring in Informatics from SMK Assalaam
+                            Bandung. Having Internship experience at PT. Khatulistiwa
+                            Nusantara Indonesia as a Mobile Developer for 3 months.</p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
@@ -131,19 +132,18 @@
             <div class="about__container container grid">
                 <img src="assets/img/aboutme.jpg" alt="" class="about__img">
                 <div class="about__data">
-                    <p class="about__description">Web developer, with extensive knowledge and years of experience,
-                        working in web technologies and Ui / Ux design, delivering quality work.</p>
+                    <p class="about__description">My name is Dikha Adi Nugraha, I live in Jl. Babakan Sukatma No. 115, I'm 18 Years Old</p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">08+</span>
+                            <span class="about__info-title">02+</span>
                             <span class="about__info-name">Years <br> experience</span>
                         </div>
                         <div>
-                            <span class="about__info-title">20+</span>
+                            <span class="about__info-title">07+</span>
                             <span class="about__info-name">Completed <br> project</span>
                         </div>
                         <div>
-                            <span class="about__info-title">05+</span>
+                            <span class="about__info-title">01+</span>
                             <span class="about__info-name">Companies <br> worked</span>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Frontend developer</h1>
-                                <span class="skills__subtitle">More Than 3 Moth</span>
+                                <!-- <span class="skills__subtitle">More Than 3 Moth</span> -->
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -188,13 +188,13 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__number">60%</span>
+                                    <span class="skills__number">50%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__css"></span>
                                 </div>
                             </div>
-                            <div class="skills__data">
+                            <!-- <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Dart</h3>
                                     <span class="skills__number">75%</span>
@@ -202,11 +202,11 @@
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__dart"></span>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__number">50%</span>
+                                    <span class="skills__number">30%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__javascript"></span>
@@ -220,7 +220,7 @@
                             <i class="uil uil-server-network skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Backend developer</h1>
-                                <span class="skills__subtitle">More Than 1 Years</span>
+                                <!-- <span class="skills__subtitle">More Than 1 Years</span> -->
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -239,7 +239,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">MySql</h3>
-                                    <span class="skills__number">80%</span>
+                                    <span class="skills__number">60%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__mysql"></span>
@@ -247,14 +247,14 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Python</h3>
-                                    <span class="skills__number">10%</span>
+                                    <h3 class="skills__name">Laravel</h3>
+                                    <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__python"></span>
                                 </div>
                             </div>
-                            <div class="skills__data">
+                            <!-- <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Node JS</h3>
                                     <span class="skills__number">50%</span>
@@ -262,7 +262,7 @@
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__nodejs"></span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -271,8 +271,8 @@
                         <div class="skills__header">
                             <i class="uil uil-swatchbook skills__icon"></i>
                             <div>
-                                <h1 class="skills__title">Designer</h1>
-                                <span class="skills__subtitle">More Than 1 Moth</span>
+                                <h1 class="skills__title">Mobile developer</h1>
+                                <!-- <span class="skills__subtitle">More Than 1 Moth</span> -->
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -281,7 +281,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Figma</h3>
+                                    <h3 class="skills__name">Dart</h3>
                                     <span class="skills__number">50%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -290,14 +290,14 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Sketch</h3>
-                                    <span class="skills__number">20%</span>
+                                    <h3 class="skills__name">Flutter</h3>
+                                    <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__sketch"></span>
                                 </div>
                             </div>
-                            <div class="skills__data">
+                            <!-- <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Photoshop</h3>
                                     <span class="skills__number">10%</span>
@@ -305,7 +305,7 @@
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__photoshop"></span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -336,11 +336,11 @@
                         <!--==================== QUALIFICATION 1 ====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Computer Enginner</h3>
-                                <span class="qualification__subtitle">SMK Assalaam - Bandung</span>
+                                <h3 class="qualification__title">MI AL-MUNAWARAH</h3>
+                                <!-- <span class="qualification__subtitle">SMK Assalaam - Bandung</span> -->
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2020 - 2023
+                                    2011 - 2017
                                 </div>
                             </div>
 
@@ -359,18 +359,18 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Computer Enginner</h3>
-                                <span class="qualification__subtitle">SMK Assalaam - Bandung</span>
+                                <h3 class="qualification__title">MTS MA'ARIF</h3>
+                                <!-- <span class="qualification__subtitle">SMK Assalaam - Bandung</span> -->
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2020 - 2023
+                                    2017 - 2020
                                 </div>
                             </div>
                         </div>
                         <!--==================== QUALIFICATION 3 ====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Computer Enginner</h3>
+                                <h3 class="qualification__title">Software Enginner</h3>
                                 <span class="qualification__subtitle">SMK Assalaam - Bandung</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -383,35 +383,17 @@
                                 <span class="qualification__line"></span>
                             </div>
                         </div>
-                        <!--==================== QUALIFICATION 4 ====================-->
-                        <div class="qualification__data">
-                            <div></div>
-
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <!-- <span class="qualification__line"></span> -->
-                            </div>
-
-                            <div>
-                                <h3 class="qualification__title">Computer Enginner</h3>
-                                <span class="qualification__subtitle">SMK Assalaam - Bandung</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    2020 - 2023
-                                </div>
-                            </div>
-                        </div>
                     </div>
                     <!--==================== QUALIFICATION CONTENT 2 ====================-->
                     <div class="qualification__content" data-content id="work">
                         <!--==================== QUALIFICATION 1 ====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Computer Enginner</h3>
-                                <span class="qualification__subtitle">SMK Assalaam - Bandung</span>
+                                <h3 class="qualification__title">Part Time</h3>
+                                <span class="qualification__subtitle">Cuci Steam</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2020 - 2023
+                                    2021
                                 </div>
                             </div>
 
@@ -827,7 +809,7 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">Nugraha</h1>
-                    <span class="footer__subtitle">Mobile developer</span>
+                    <span class="footer__subtitle">Programmer</span>
                 </div>
 
                 <ul class="footer__links">
@@ -857,7 +839,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Bedimcode. All right reserved</p>
+            <!-- <p class="footer__copy">&#169; Bedimcode. All right reserved</p> -->
         </div>
     </footer>
 
